# trillingsanalyse

./: CMakeLists.txt  README.md  main  main.cpp
lib/: ADS1258.cpp  CMakeLists.txt
lib/inc/: ADS1258.h  commands.h
